# odd-eye

./: .gitattributes  .gitmodules  Cargo.toml  README.md
nginx/: .dockerignore  docker-compose.yml
nginx/docker/: Dockerfile  compile.sh  nginx.conf
src/: main.rs
