[package]
name = "odd-eye"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.1.3", features = ["headers"] }
serde = { version = "1.0.127",  features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.8.1",   features = ["full"] }
better-panic = "0.2.0"
futures = "0.3.15"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
chacha20poly1305 = { version = "0.8.1", features = ["xchacha20poly1305"] }
time = { version = "0.3.1", features = ["formatting"] }
rand = { version = "0.8.4", features = ["std_rng"] }
base64 = "0.13.0"